[gd_scene load_steps=10 format=3 uid="uid://dq5puheu774fb"]

[ext_resource type="Script" uid="uid://di424wmf8cgm2" path="res://scripts/Player.gd" id="1_f51j4"]
[ext_resource type="Texture2D" uid="uid://dh5k8u0q2gqhs" path="res://assets/original/player-new.png" id="2_14axx"]
[ext_resource type="Texture2D" uid="uid://6ivgj1st88ek" path="res://assets/original/player.png" id="2_51tad"]
[ext_resource type="AudioStream" uid="uid://dftul3jla4c8m" path="res://assets/sounds/jump.mp3" id="3_s20k3"]
[ext_resource type="PackedScene" uid="uid://b7kxdk0sfkbcf" path="res://scenes/LevelObjects/camera.tscn" id="4_7v1q2"]
[ext_resource type="Texture2D" uid="uid://d3kr160kdbxfc" path="res://assets/original/player.jpg" id="5_7s2es"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmwyj"]
size = Vector2(118, 117)

[sub_resource type="SpriteFrames" id="SpriteFrames_hccvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_14axx")
}, {
"duration": 1.0,
"texture": ExtResource("5_7s2es")
}, {
"duration": 1.0,
"texture": ExtResource("5_7s2es")
}, {
"duration": 1.0,
"texture": ExtResource("2_51tad")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fj45a"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Player:visible")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_f51j4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_mmwyj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.242, 0.242)
sprite_frames = SubResource("SpriteFrames_hccvp")

[node name="JumpSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_s20k3")
bus = &"SFX"

[node name="Camera2D" parent="." instance=ExtResource("4_7v1q2")]
limit_bottom = 3000

[node name="JumpFXTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Player" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.242, 0.242)
texture = ExtResource("5_7s2es")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fj45a")

[connection signal="timeout" from="JumpFXTimer" to="." method="_on_jump_fx_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
